test/compile-error/1/Solution.java
public class Solution {

  // Incorrect syntax
  public inr main ;) {
    hahaha this isn't even java
  }

  ya it's probably broken by now

}
